--- a/playground/package.json
+++ b/playground/package.json
@@ -3,16 +3,19 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "nuxi dev",
-    "build": "nuxi build",
-    "generate": "nuxi generate",
+    "dev": "nuxt dev",
+    "build": "nuxt build",
+    "generate": "nuxt generate",
     "dev:prepare": "nuxt prepare"
   },
   "devDependencies": {
+    "@electric-sql/pglite": "^0.3.10",
     "@nuxt/content": "latest",
     "@nuxt/ui": "^4.0.1",
-    "@nuxthub/core": "^0.9.0",
+    "@nuxthub/core": "link:/Users/atinux/Projects/nuxthub/core",
+    "better-sqlite3": "^12.4.1",
     "nuxt": "^4.1.3",
+    "pg": "^8.16.3",
     "remark-code-import": "^1.2.0",
     "shiki-transformer-color-highlight": "^1.0.0"
   }
