--- a/playground/package.json
+++ b/playground/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@electric-sql/pglite": "^0.3.10",
+    "@libsql/client": "^0.15.15",
     "@nuxt/content": "latest",
     "@nuxt/ui": "^4.0.1",
     "@nuxthub/core": "npm:@nuxthub/core-nightly@latest",
