--- a/docs/package.json
+++ b/docs/package.json
@@ -5,12 +5,13 @@
     "build": "nuxt build"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.15",
     "@nuxt/content": "link:..",
-    "@nuxthub/core": "https://pkg.pr.new/@nuxthub/core@3d374d9",
+    "@nuxthub/core": "npm:@nuxthub/core-nightly@latest",
     "@nuxtjs/plausible": "^2.0.1",
     "@vueuse/nuxt": "^13.9.0",
     "better-sqlite3": "^12.4.1",
-    "docus": "https://pkg.pr.new/docus@1194",
+    "docus": "^5.2.1",
     "minisearch": "^7.2.0",
     "@nuxt/ui": "^4.0.1",
     "nuxt": "^4.1.3"
