--- a/docs/package.json
+++ b/docs/package.json
@@ -7,13 +7,14 @@
   "dependencies": {
     "@libsql/client": "^0.15.15",
     "@nuxt/content": "link:..",
+    "@nuxt/ui": "^4.0.1",
     "@nuxthub/core": "npm:@nuxthub/core-nightly@latest",
     "@nuxtjs/plausible": "^2.0.1",
     "@vueuse/nuxt": "^13.9.0",
     "better-sqlite3": "^12.4.1",
     "docus": "^5.2.1",
+    "drizzle-orm": "^0.44.7",
     "minisearch": "^7.2.0",
-    "@nuxt/ui": "^4.0.1",
     "nuxt": "^4.1.3"
   }
 }
