--- a/playground/package.json
+++ b/playground/package.json
@@ -15,6 +15,7 @@
     "@nuxt/ui": "^4.0.1",
     "@nuxthub/core": "npm:@nuxthub/core-nightly@latest",
     "better-sqlite3": "^12.4.1",
+    "drizzle-orm": "^0.44.7",
     "nuxt": "^4.1.3",
     "pg": "^8.16.3",
     "remark-code-import": "^1.2.0",
