--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "micromatch": "^4.0.8",
     "minimark": "^0.2.0",
     "minimatch": "^10.0.3",
+    "modern-tar": "^0.6.1",
     "nuxt-component-meta": "https://pkg.pr.new/nuxt-component-meta@e3eb2c4",
     "nypm": "^0.6.2",
     "ohash": "^2.0.11",
@@ -97,7 +98,6 @@
     "slugify": "^1.6.6",
     "socket.io-client": "^4.8.1",
     "std-env": "^3.10.0",
-    "tar": "^7.5.1",
     "tinyglobby": "^0.2.15",
     "ufo": "^1.6.1",
     "unctx": "^2.4.1",
