chore(deps): add nuxt studio

--- a/docs/package.json
+++ b/docs/package.json
@@ -15,6 +15,7 @@
     "docus": "^5.2.1",
     "drizzle-orm": "^0.44.7",
     "minisearch": "^7.2.0",
-    "nuxt": "^4.2.0"
+    "nuxt": "^4.2.0",
+    "nuxt-studio": "https://pkg.pr.new/nuxt-content/studio/nuxt-studio@0263856"
   }
 }
