--- a/docs/package.json
+++ b/docs/package.json
@@ -18,6 +18,6 @@
     "drizzle-orm": "^0.44.7",
     "minisearch": "^7.2.0",
     "nuxt": "^4.2.0",
-    "nuxt-studio": "https://pkg.pr.new/nuxt-content/studio/nuxt-studio@dc7ddb6"
+    "nuxt-studio": "v1.0.0-alpha.1"
   }
 }
