--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "ohash": "^2.0.11",
     "pathe": "^2.0.3",
     "pkg-types": "^2.3.0",
-    "remark-mdc": "^3.7.0",
+    "remark-mdc": "^3.8.1",
     "scule": "^1.3.0",
     "shiki": "^3.14.0",
     "slugify": "^1.6.6",
@@ -168,7 +168,8 @@
     "wrangler": "^4.45.1"
   },
   "resolutions": {
-    "@nuxt/content": "workspace:*"
+    "@nuxt/content": "workspace:*",
+    "remark-mdc": "3.8.1"
   },
   "packageManager": "pnpm@10.19.0",
   "unbuild": {
