chore: upgrade deps

--- a/package.json
+++ b/package.json
@@ -56,16 +56,16 @@
     "test:bun": "bun test ./test/bun.test.ts",
     "test:watch": "vitest watch",
     "test:types": "vue-tsc --noEmit",
-    "verify": "npm run dev:prepare && npm run lint && npm run test && npm run typecheck"
+    "verify": "npm run dev:prepare && npm run prepack && npm run lint && npm run test && npm run typecheck"
   },
   "dependencies": {
-    "@nuxt/kit": "^4.2.0",
-    "@nuxtjs/mdc": "^0.18.0",
-    "@shikijs/langs": "^3.14.0",
-    "@sqlite.org/sqlite-wasm": "3.50.4-build1",
+    "@nuxt/kit": "^4.2.1",
+    "@nuxtjs/mdc": "^0.18.3",
+    "@shikijs/langs": "^3.15.0",
+    "@sqlite.org/sqlite-wasm": "3.51.1-build1",
     "@standard-schema/spec": "^1.0.0",
     "@webcontainer/env": "^1.1.1",
-    "c12": "^3.3.1",
+    "c12": "^3.3.2",
     "chokidar": "^4.0.3",
     "consola": "^3.4.2",
     "db0": "^0.3.4",
@@ -85,16 +85,16 @@
     "micromark-util-sanitize-uri": "^2.0.1",
     "micromatch": "^4.0.8",
     "minimark": "^0.2.0",
-    "minimatch": "^10.0.3",
-    "modern-tar": "^0.6.1",
-    "nuxt-component-meta": "https://pkg.pr.new/nuxt-component-meta@e3eb2c4",
+    "minimatch": "^10.1.1",
+    "modern-tar": "^0.7.0",
+    "nuxt-component-meta": "0.14.2",
     "nypm": "^0.6.2",
     "ohash": "^2.0.11",
     "pathe": "^2.0.3",
     "pkg-types": "^2.3.0",
     "remark-mdc": "^3.8.1",
     "scule": "^1.3.0",
-    "shiki": "^3.14.0",
+    "shiki": "^3.15.0",
     "slugify": "^1.6.6",
     "socket.io-client": "^4.8.1",
     "std-env": "^3.10.0",
@@ -137,41 +137,41 @@
     }
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20251014.0",
+    "@cloudflare/workers-types": "^4.20251111.0",
     "@nuxt/content": "link:.",
-    "@nuxt/devtools": "^2.7.0",
-    "@nuxt/eslint-config": "^1.9.0",
-    "@nuxt/kit": "^4.2.0",
+    "@nuxt/devtools": "^3.1.0",
+    "@nuxt/eslint-config": "^1.10.0",
+    "@nuxt/kit": "^4.2.1",
     "@nuxt/module-builder": "^1.0.2",
-    "@nuxt/schema": "^4.2.0",
+    "@nuxt/schema": "^4.2.1",
     "@nuxt/test-utils": "^3.20.1",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/better-sqlite3": "^7.6.13",
-    "@types/bun": "^1.3.1",
+    "@types/bun": "^1.3.2",
     "@types/micromatch": "^4.0.10",
     "@types/minimatch": "^6.0.0",
-    "@types/node": "^24.9.1",
+    "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
     "@types/ws": "^8.18.1",
     "@valibot/to-json-schema": "^1.3.0",
-    "csvtojson": "^2.0.13",
-    "eslint": "^9.38.0",
-    "happy-dom": "^20.0.8",
+    "csvtojson": "^2.0.14",
+    "eslint": "^9.39.1",
+    "happy-dom": "^20.0.10",
     "mdclint": "^0.0.3",
     "micromark-util-types": "^2.0.2",
-    "nuxt": "^4.2.0",
-    "release-it": "^19.0.5",
+    "nuxt": "^4.2.1",
+    "release-it": "^19.0.6",
     "typescript": "5.9.3",
     "valibot": "^1.1.0",
-    "vitest": "^4.0.4",
-    "vue-tsc": "^3.1.2",
-    "wrangler": "^4.45.1"
+    "vitest": "^4.0.8",
+    "vue-tsc": "^3.1.3",
+    "wrangler": "^4.48.0"
   },
   "resolutions": {
     "@nuxt/content": "workspace:*",
     "remark-mdc": "3.8.1"
   },
-  "packageManager": "pnpm@10.19.0",
+  "packageManager": "pnpm@10.22.0",
   "unbuild": {
     "entries": [
       "./src/module",
