--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "tar": "^7.4.3",
     "tinyglobby": "^0.2.15",
     "ufo": "^1.6.1",
+    "uncrypto": "^0.1.3",
     "unctx": "^2.4.1",
     "unified": "^11.0.5",
     "unist-util-stringify-position": "^4.0.0",
