--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
   "dependencies": {
     "@nuxt/kit": "^4.2.1",
     "@nuxtjs/mdc": "^0.19.1",
-    "@shikijs/langs": "^3.17.0",
+    "@shikijs/langs": "^3.18.0",
     "@sqlite.org/sqlite-wasm": "3.50.4-build1",
     "@standard-schema/spec": "^1.0.0",
     "@webcontainer/env": "^1.1.1",
@@ -94,7 +94,7 @@
     "pkg-types": "^2.3.0",
     "remark-mdc": "^3.9.0",
     "scule": "^1.3.0",
-    "shiki": "^3.17.0",
+    "shiki": "^3.18.0",
     "slugify": "^1.6.6",
     "socket.io-client": "^4.8.1",
     "std-env": "^3.10.0",
@@ -157,7 +157,7 @@
     "csvtojson": "^2.0.14",
     "eslint": "^9.39.1",
     "happy-dom": "^20.0.11",
-    "mdclint": "^0.0.3",
+    "mdclint": "https://pkg.pr.new/nuxt-content/mdclint@126e6c6",
     "micromark-util-types": "^2.0.2",
     "nuxt": "^4.2.1",
     "release-it": "^19.0.6",
