--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nuxt/content",
-  "version": "3.8.2",
+  "version": "3.9.0",
   "description": "Write your content inside your Nuxt app",
   "homepage": "https://content.nuxt.com",
   "keywords": [
@@ -170,7 +170,9 @@
   "resolutions": {
     "@nuxt/content": "workspace:*"
   },
-  "engines": { "node": ">= 20.19.0" },
+  "engines": {
+    "node": ">= 20.19.0"
+  },
   "packageManager": "pnpm@10.24.0",
   "unbuild": {
     "entries": [
