--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "destr": "^2.0.5",
     "git-url-parse": "^16.1.0",
     "hookable": "^5.5.3",
+    "isomorphic-git": "^1.33.1",
     "jiti": "^2.6.1",
     "json-schema-to-typescript": "^15.0.4",
     "knitwork": "^1.3.0",
@@ -86,7 +87,6 @@
     "micromatch": "^4.0.8",
     "minimark": "^0.2.0",
     "minimatch": "^10.1.1",
-    "modern-tar": "^0.7.2",
     "nuxt-component-meta": "0.15.0",
     "nypm": "^0.6.2",
     "ohash": "^2.0.11",
