chore: upgrade deps

--- a/playground/package.json
+++ b/playground/package.json
@@ -13,9 +13,9 @@
     "@libsql/client": "^0.15.15",
     "@nuxt/content": "latest",
     "@nuxt/ui": "^4.2.1",
-    "@nuxthub/core": "npm:@nuxthub/core-nightly@0.10.0-20251128-232930-0579c39",
+    "@nuxthub/core": "^0.10.2",
     "better-sqlite3": "^12.5.0",
-    "drizzle-orm": "^0.44.7",
+    "drizzle-orm": "^0.45.1",
     "nuxt": "^4.2.2",
     "pg": "^8.16.3",
     "remark-code-import": "^1.2.0",
