--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -35,7 +35,7 @@ body:
     id: version
     attributes:
       label: Version
-      placeholder: v2
+      placeholder: v3.x.x
     validations:
       required: true
   - type: textarea
