--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "@libsql/client": "*",
     "@valibot/to-json-schema": "^1.5.0",
     "better-sqlite3": "^12.5.0",
+    "effect": "^3.19.13",
     "sqlite3": "*",
     "valibot": "^1.2.0"
   },
@@ -154,6 +155,7 @@
     "@types/pg": "^8.16.0",
     "@types/ws": "^8.18.1",
     "@valibot/to-json-schema": "^1.5.0",
+    "effect": "^3.19.13",
     "csvtojson": "^2.0.14",
     "eslint": "^9.39.2",
     "happy-dom": "^20.0.11",
