--- a/docs/package.json
+++ b/docs/package.json
@@ -5,7 +5,7 @@
     "build": "nuxt build"
   },
   "dependencies": {
-    "@libsql/client": "^0.17.0",
+    "@libsql/client": "^0.15.15",
     "@nuxt/content": "link:..",
     "@nuxt/ui": "^4.3.0",
     "@nuxthub/core": "^0.10.4",
@@ -13,11 +13,11 @@
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "@vueuse/nuxt": "^14.1.0",
-    "better-sqlite3": "^12.6.0",
-    "docus": "^5.4.2",
+    "better-sqlite3": "^12.5.0",
+    "docus": "^5.4.1",
     "drizzle-orm": "^0.45.1",
     "minisearch": "^7.2.0",
     "nuxt": "^4.2.2",
-    "nuxt-studio": "1.1.0"
+    "nuxt-studio": "1.0.0-beta.3"
   }
 }
