chore: upgrade deps (#3691)

--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
   },
   "dependencies": {
     "@nuxt/kit": "^4.2.2",
-    "@nuxtjs/mdc": "^0.19.2",
-    "@shikijs/langs": "^3.20.0",
+    "@nuxtjs/mdc": "^0.20.0",
+    "@shikijs/langs": "^3.21.0",
     "@sqlite.org/sqlite-wasm": "3.50.4-build1",
     "@standard-schema/spec": "^1.1.0",
     "@webcontainer/env": "^1.1.1",
@@ -87,26 +87,26 @@
     "micromatch": "^4.0.8",
     "minimark": "^0.2.0",
     "minimatch": "^10.1.1",
-    "nuxt-component-meta": "0.16.0",
+    "nuxt-component-meta": "0.17.1",
     "nypm": "^0.6.2",
     "ohash": "^2.0.11",
     "pathe": "^2.0.3",
     "pkg-types": "^2.3.0",
     "remark-mdc": "^3.10.0",
     "scule": "^1.3.0",
-    "shiki": "^3.20.0",
+    "shiki": "^3.21.0",
     "slugify": "^1.6.6",
     "socket.io-client": "^4.8.3",
     "std-env": "^3.10.0",
     "tinyglobby": "^0.2.15",
-    "ufo": "^1.6.1",
+    "ufo": "^1.6.3",
     "unctx": "^2.5.0",
     "unified": "^11.0.5",
     "unist-util-stringify-position": "^4.0.0",
     "unist-util-visit": "^5.0.0",
     "unplugin": "^2.3.11",
     "zod": "^3.25.76",
-    "zod-to-json-schema": "^3.25.0"
+    "zod-to-json-schema": "^3.25.1"
   },
   "peerDependencies": {
     "@electric-sql/pglite": "*",
@@ -137,35 +137,36 @@
     }
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20251224.0",
+    "@cloudflare/workers-types": "^4.20260115.0",
     "@nuxt/content": "link:.",
     "@nuxt/devtools": "^3.1.1",
     "@nuxt/eslint-config": "^1.12.1",
     "@nuxt/kit": "^4.2.2",
     "@nuxt/module-builder": "^1.0.2",
     "@nuxt/schema": "^4.2.2",
-    "@nuxt/test-utils": "^3.21.0",
+    "@nuxt/test-utils": "^3.23.0",
     "@release-it/conventional-changelog": "^10.0.4",
     "@types/better-sqlite3": "^7.6.13",
-    "@types/bun": "^1.3.5",
+    "@types/bun": "^1.3.6",
     "@types/micromatch": "^4.0.10",
     "@types/minimatch": "^6.0.0",
-    "@types/node": "^25.0.3",
+    "@types/node": "^25.0.9",
     "@types/pg": "^8.16.0",
     "@types/ws": "^8.18.1",
     "@valibot/to-json-schema": "^1.5.0",
+    "@vue/test-utils": "^2.4.6",
     "csvtojson": "^2.0.14",
     "eslint": "^9.39.2",
-    "happy-dom": "^20.0.11",
+    "happy-dom": "^20.3.0",
     "mdclint": "^0.1.2",
     "micromark-util-types": "^2.0.2",
     "nuxt": "^4.2.2",
-    "release-it": "^19.2.1",
+    "release-it": "^19.2.3",
     "typescript": "5.9.3",
     "valibot": "^1.2.0",
-    "vitest": "^4.0.16",
-    "vue-tsc": "^3.2.1",
-    "wrangler": "^4.56.0"
+    "vitest": "^4.0.17",
+    "vue-tsc": "^3.2.2",
+    "wrangler": "^4.59.2"
   },
   "resolutions": {
     "@nuxt/content": "workspace:*"
@@ -173,7 +174,7 @@
   "engines": {
     "node": ">= 20.19.0"
   },
-  "packageManager": "pnpm@10.26.2",
+  "packageManager": "pnpm@10.28.0",
   "unbuild": {
     "entries": [
       "./src/module",
